Introduced channel rights