@@ -2,6 +2,7 @@ package de.tum.in.www1.artemis.service.metis.conversation;
 
 import java.time.ZonedDateTime;
 import java.util.*;
+import java.util.stream.Collectors;
 
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
@@ -46,9 +47,11 @@ public class ConversationService {
 
     private final GroupChatService groupChatService;
 
+    private final ChannelAuthorizationService channelAuthorizationService;
+
     public ConversationService(UserRepository userRepository, ChannelRepository channelRepository, ConversationParticipantRepository conversationParticipantRepository,
             ConversationRepository conversationRepository, SimpMessageSendingOperations messagingTemplate, GroupChatRepository groupChatRepository,
-            GroupChatService groupChatService) {
+            GroupChatService groupChatService, ChannelAuthorizationService channelAuthorizationService) {
         this.userRepository = userRepository;
         this.channelRepository = channelRepository;
         this.conversationParticipantRepository = conversationParticipantRepository;
@@ -56,6 +59,7 @@ public class ConversationService {
         this.messagingTemplate = messagingTemplate;
         this.groupChatRepository = groupChatRepository;
         this.groupChatService = groupChatService;
+        this.channelAuthorizationService = channelAuthorizationService;
     }
 
     public void registerUsers(Course course, Set<User> usersToRegister, Conversation conversation) {
@@ -81,12 +85,18 @@ public class ConversationService {
         conversationFromDatabase.getConversationParticipants().addAll(newConversationParticipants);
         conversationRepository.save(conversationFromDatabase);
 
-        var websocketDTO = new ConversationWebsocketDTO(convertConversationToDTO(conversationFromDatabase), MetisCrudAction.CREATE);
-        broadcastOnConversationMembershipChannel(course, websocketDTO, usersToRegister);
+        broadcastOnConversationMembershipChannel(course, MetisCrudAction.CREATE, conversationFromDatabase, userThatNeedToBeRegistered);
     }
 
     public void deregisterUsers(Course course, Set<User> usersToDeregister, Conversation conversation) {
         var conversationFromDatabase = conversationRepository.findByIdWithConversationParticipantsElseThrow(conversation.getId());
+
+        if (conversation instanceof Channel channel) {
+            var creator = channel.getCreator();
+            if (usersToDeregister.contains(creator)) {
+                throw new AccessForbiddenException("The creator of a channel cannot be deregistered. Even self deregistration is not possible.");
+            }
+        }
 
         var participantsToRemove = new HashSet<ConversationParticipant>();
 
@@ -99,25 +109,27 @@ public class ConversationService {
         conversationFromDatabase.getConversationParticipants().removeAll(participantsToRemove);
         conversationRepository.save(conversationFromDatabase);
         conversationParticipantRepository.deleteAll(participantsToRemove);
-        var websocketDTO = new ConversationWebsocketDTO(convertConversationToDTO(conversationFromDatabase), MetisCrudAction.DELETE);
-        broadcastOnConversationMembershipChannel(course, websocketDTO, usersToDeregister);
+        broadcastOnConversationMembershipChannel(course, MetisCrudAction.DELETE, conversationFromDatabase, usersToDeregister);
 
     }
 
-    public ConversationDTO convertConversationToDTO(Conversation conversation) {
-        var requestingUser = this.userRepository.getUserWithGroupsAndAuthorities();
+    public ConversationDTO convertToDTOForUser(Conversation conversation, User user) {
         ConversationDTO dto = null;
         if (conversation instanceof Channel channel) {
             dto = new ChannelDTO(channel);
+            ((ChannelDTO) dto).setIsChannelAdmin(channelAuthorizationService.isChannelAdmin(channel.getId(), user.getId()));
+            ((ChannelDTO) dto).setHasChannelAdminRights(channelAuthorizationService.hasChannelAdminRights(channel.getId(), user));
         }
-        else if (conversation instanceof GroupChat groupChat) {
+        if (conversation instanceof GroupChat groupChat) {
             dto = new GroupChatDTO(groupChat);
-            ((GroupChatDTO) dto).setNamesOfOtherMembers(groupChatService.getNamesOfOtherMembers(groupChat, requestingUser));
+            ((GroupChatDTO) dto).setNamesOfOtherMembers(groupChatService.getNamesOfOtherMembers(groupChat, user));
         }
-        if (dto != null) {
-            dto.setIsMember(isMember(conversation.getId(), requestingUser.getId()));
-            dto.setNumberOfMembers(getMemberCount(conversation.getId()));
+        if (dto == null) {
+            throw new IllegalArgumentException("The conversation type is not supported.");
         }
+        dto.setIsMember(isMember(conversation.getId(), user.getId()));
+        dto.setIsCreator(isCreator(conversation.getId(), user.getId()));
+        dto.setNumberOfMembers(getMemberCount(conversation.getId()));
         return dto;
     }
 
@@ -129,46 +141,44 @@ public class ConversationService {
         return conversationParticipantRepository.findConversationParticipantByConversationIdAndUserId(conversationId, userId).isPresent();
     }
 
+    public boolean isCreator(Long conversationId, Long userId) {
+        var conversation = conversationRepository.findByIdElseThrow(conversationId);
+        if (conversation.getCreator() != null) {
+            return conversation.getCreator().getId().equals(userId);
+        }
+        else {
+            return false;
+        }
+    }
+
     public Integer getMemberCount(Long channelId) {
         return conversationParticipantRepository.countByConversationId(channelId);
     }
 
     public List<ConversationDTO> getConversationsOfUser(Long courseId, User user) {
-
-        var activeGroupChatsOfUser = groupChatRepository.findActiveGroupChatsOfUserWithConversationParticipants(courseId, user.getId()).stream().map(groupChat -> {
-            var dto = new GroupChatDTO(groupChat);
-            dto.setIsMember(true);
-            dto.setNumberOfMembers(groupChat.getConversationParticipants().size());
-            dto.setNamesOfOtherMembers(groupChatService.getNamesOfOtherMembers(groupChat, user));
-            return dto;
-        }).toList();
-
-        var channelsOfUser = channelRepository.findChannelsOfUser(courseId, user.getId()).stream().map(channel -> {
-            var dto = new ChannelDTO(channel);
-            dto.setIsMember(true);
-            dto.setNumberOfMembers(getMemberCount(channel.getId()));
-            return dto;
-        }).toList();
-
-        var allConversations = new ArrayList<ConversationDTO>();
-        allConversations.addAll(activeGroupChatsOfUser);
-        allConversations.addAll(channelsOfUser);
-
-        return allConversations;
+        var activeGroupChatsOfUser = groupChatRepository.findActiveGroupChatsOfUserWithConversationParticipants(courseId, user.getId());
+        var channelsOfUser = channelRepository.findChannelsOfUser(courseId, user.getId());
+        var conversations = new ArrayList<Conversation>();
+        conversations.addAll(activeGroupChatsOfUser);
+        conversations.addAll(channelsOfUser);
+        var conversationDTOs = conversations.parallelStream().unordered().map(conversation -> convertToDTOForUser(conversation, user)).collect(Collectors.toList());
+        return conversationDTOs;
     }
 
     public Conversation updateConversation(Conversation conversation) {
         return conversationRepository.save(conversation);
     }
 
-    public void broadcastOnConversationMembershipChannel(Course course, ConversationWebsocketDTO conversationWebsocketDTO, Set<User> usersToMessage) {
+    public void broadcastOnConversationMembershipChannel(Course course, MetisCrudAction metisCrudAction, Conversation conversation, Set<User> usersToMessage) {
         String courseTopicName = METIS_WEBSOCKET_CHANNEL_PREFIX + "courses/" + course.getId();
         String conversationParticipantTopicName = courseTopicName + "/conversations/user/";
-        usersToMessage.forEach(user -> sendToConversationMembershipChannel(conversationWebsocketDTO, user, conversationParticipantTopicName));
+        usersToMessage.forEach(user -> sendToConversationMembershipChannel(metisCrudAction, conversation, user, conversationParticipantTopicName));
     }
 
-    private void sendToConversationMembershipChannel(ConversationWebsocketDTO conversationWebsocketDTO, User user, String conversationParticipantTopicName) {
-        messagingTemplate.convertAndSendToUser(user.getLogin(), conversationParticipantTopicName + user.getId(), conversationWebsocketDTO);
+    private void sendToConversationMembershipChannel(MetisCrudAction metisCrudAction, Conversation conversation, User user, String conversationParticipantTopicName) {
+        var dto = convertToDTOForUser(conversation, user);
+        var websocketDTO = new ConversationWebsocketDTO(dto, metisCrudAction);
+        messagingTemplate.convertAndSendToUser(user.getLogin(), conversationParticipantTopicName + user.getId(), websocketDTO);
     }
 
     public Conversation mayInteractWithConversationElseThrow(Long conversationId, User user) {
